--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "harsh.cloud",
-  "version": "1.0.0",
-  "description": "Harsh's Applications",
-  "main": "index.html",
+  "private": true,
   "scripts": {
-    "start": "serve",
-    "build": "echo This is a static template, there is no bundler or bundling involved!"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hc-oss/harsh.cloud.git"
+  "dependencies": {
+    "next": "latest",
+    "random-gradient": "^0.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
-  "keywords": [
-    "static",
-    "template",
-    "codesandbox"
-  ],
-  "author": "Harsh Zalavadiya",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/hc-oss/harsh.cloud/issues"
-  },
-  "homepage": "https://github.com/hc-oss/harsh.cloud#readme",
   "devDependencies": {
-    "serve": "^12.0.1"
+    "@types/node": "17.0.4",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwindcss": "^3.0.7",
+    "typescript": "4.5.4"
   }
 }
